Nexter Project: Make Reponsive With Small Change With Media Query

--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -1,28 +1,46 @@
-.features{
-    //background-color: $color-grey-light-2;
+.features {
     grid-column: center-start /center-end;
-    
+
     margin: 15rem 0;
-    
-    display: grid;
-    grid-gap: 6rem;
-    align-items: start;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-columns : repeat(auto-fit,minmax(25rem,1fr));
+
+    /* Suppose you dont have grid support*/
+    @supports(display: grid) {
+        display: grid;
+        grid-gap: 6rem;
+        align-items: start;
+        grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+
+    }
 }
 
-.feature{
+.feature {
+    /*WITHOUT GRID CODE - START*/
+    float: left;
+    width: 33.33%;
+    margin-bottom: 6rem;
+    //padding: 2rem;
+
+    @supports(display: grid) {
+        float: none;
+        width: auto;
+        margin-bottom: 0;
+    }
+
+    /*WITHOUT GRID CODE - END*/
+
     display: grid;
     grid-template-columns: min-content 1fr;
     grid-row-gap: 1.5rem;
     grid-column-gap: 2.5rem;
-    &__icon{
-        fill:$color-primary;
+
+    &__icon {
+        fill: $color-primary;
         width: 4.5rem;
         height: 4.5rem;
         grid-row: 1 / span 2;
     }
-    &__text{
+
+    &__text {
         font-size: 1.7rem;
     }
 }
