--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -1,31 +1,48 @@
-.realtors{
+.realtors {
     background-color: $color-secondary;
     grid-column: col-start 7 / full-end;
+    padding: 3rem;
 
-    display:  grid;
+    display: grid;
     align-content: center;
     justify-content: center;
     grid-row-gap: 3rem;
-    &__heading{
+
+    @media only screen and (max-width: $bp-medium) {
+        grid-column: 1/-1;
+    }
+
+    &__heading {
         text-align: center;
     }
-    &__list{
+
+    &__list {
         display: grid;
         grid-template-columns: min-content max-content;
         grid-column-gap: 2rem;
         grid-row-gap: 5vh;
         align-items: center;
         text-align: center;
+
+        @media only screen and (max-width: $bp-medium) {
+            grid-template-columns: repeat(3,min-content max-content);
+        }
+        @media only screen and (max-width: $bp-small){
+            grid-template-columns: min-content max-content;
+        }
     }
-    &__img{
+
+    &__img {
         width: 6rem;
         border-radius: 50%;
         display: block;
     }
-    &__detail{
-        
+
+    &__details {
+        //text-transform: uppercase;
     }
-    &__sold{
+
+    &__sold {
         text-transform: uppercase;
         color: $color-grey-light-1;
         margin-top: -3px;
