--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@ html {
   font-size: 62.5%;
   /*10px/16px  =62.5% => 1rem=10px;*/
 }
+@media only screen and (max-width: 75em) {
+  html {
+    font-size: 50%;
+  }
+}
 
 body {
   font-family: "Nunito", sans-serif;
@@ -23,10 +28,19 @@ body {
   display: grid;
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
   grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
-  /*    & > *{
-          padding: 40px;
-          font-size: 3rem;
-      }*/
+}
+@media only screen and (max-width: 62.5em) {
+  .container {
+    display: grid;
+    grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+    grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+  }
+}
+@media only screen and (max-width: 50em) {
+  .container {
+    display: grid;
+    grid-template-rows: 6rem calc(100vh - 6rem);
+  }
 }
 
 .heading .heading-4, .heading .heading-3, .heading .heading-2, .heading .heading-1 {
@@ -108,6 +122,14 @@ body {
   justify-items: center;
   align-items: start;
 }
+@media only screen and (max-width: 62.5em) {
+  .sidebar {
+    grid-column: 1/-1;
+    grid-row: 1/2;
+    justify-content: end;
+    align-content: center;
+  }
+}
 
 .nav-btn {
   border-radius: 0;
@@ -131,6 +153,21 @@ body {
 .nav-btn::after {
   transform: translateY(-1.7rem);
 }
+@media only screen and (max-width: 62.5em) {
+  .nav-btn {
+    margin-top: 0;
+    margin-right: 3rem;
+    width: 3rem;
+  }
+  .nav-btn::before {
+    transform: translateY(1.1rem);
+    width: 3rem;
+  }
+  .nav-btn::after {
+    transform: translateY(-1.3rem);
+    width: 3rem;
+  }
+}
 
 .header {
   background-color: #54483A;
@@ -141,10 +178,20 @@ body {
   padding: 8rem;
   padding-top: 4rem;
   display: grid;
-  grid-template-rows: 1fr min-content 6rem 1fr;
-  grid-template-columns: max-content;
+  grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
+  grid-template-columns: minmax(min-content, max-content);
   grid-row-gap: 1.5rem;
   justify-content: center;
+}
+@media only screen and (max-width: 50em) {
+  .header {
+    grid-column: 1/-1;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .header {
+    padding: 5rem;
+  }
 }
 .header__logo {
   height: 3rem;
@@ -155,7 +202,7 @@ body {
   justify-self: start;
 }
 .header__seenon-text {
-  color: #54483A;
+  color: #f9f7f6;
   font-size: 1.6rem;
   display: grid;
   grid-template-columns: 1fr max-content 1fr;
@@ -172,19 +219,27 @@ body {
   display: grid;
   justify-content: space-around;
   grid-auto-flow: column;
+  grid-column-gap: 2rem;
 }
 .header__seenon-logos img {
-  height: 2.5rem;
+  max-height: 2.5rem;
+  max-width: 100%;
   filter: brightness(60%);
 }
 
 .realtors {
   background-color: #101d2c;
   grid-column: col-start 7/full-end;
+  padding: 3rem;
   display: grid;
   align-content: center;
   justify-content: center;
   grid-row-gap: 3rem;
+}
+@media only screen and (max-width: 50em) {
+  .realtors {
+    grid-column: 1/-1;
+  }
 }
 .realtors__heading {
   text-align: center;
@@ -196,6 +251,16 @@ body {
   grid-row-gap: 5vh;
   align-items: center;
   text-align: center;
+}
+@media only screen and (max-width: 50em) {
+  .realtors__list {
+    grid-template-columns: repeat(3, min-content max-content);
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .realtors__list {
+    grid-template-columns: min-content max-content;
+  }
 }
 .realtors__img {
   width: 6rem;
@@ -211,18 +276,34 @@ body {
 .features {
   grid-column: center-start/center-end;
   margin: 15rem 0;
-  display: grid;
-  grid-gap: 6rem;
-  align-items: start;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  /* Suppose you dont have grid support*/
+}
+@supports (display: grid) {
+  .features {
+    display: grid;
+    grid-gap: 6rem;
+    align-items: start;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  }
 }
 
 .feature {
+  /*WITHOUT GRID CODE - START*/
+  float: left;
+  width: 33.33%;
+  margin-bottom: 6rem;
+  /*WITHOUT GRID CODE - END*/
   display: grid;
   grid-template-columns: min-content 1fr;
   grid-row-gap: 1.5rem;
   grid-column-gap: 2.5rem;
+}
+@supports (display: grid) {
+  .feature {
+    float: none;
+    width: auto;
+    margin-bottom: 0;
+  }
 }
 .feature__icon {
   fill: #c69963;
@@ -237,11 +318,19 @@ body {
 .story__pictures {
   background-color: #c69963;
   grid-column: full-start/col-end 4;
+  background-size: cover;
   display: grid;
   grid-template-rows: repeat(6, 1fr);
   grid-template-columns: repeat(6, 1fr);
   align-items: center;
   background-image: linear-gradient(rgba(198, 153, 99, 0.5), rgba(198, 153, 99, 0.5)), url(../img/back.jpg);
+}
+@media only screen and (max-width: 50em) {
+  .story__pictures {
+    grid-column: 1/-1;
+    padding: 6rem;
+    grid-row: 6/span 1;
+  }
 }
 .story__img--1 {
   width: 100%;
@@ -249,12 +338,24 @@ body {
   grid-row: 2/6;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
 }
+@media only screen and (max-width: 50em) {
+  .story__img--1 {
+    grid-column: 1/5;
+    grid-row: 1/-1;
+  }
+}
 .story__img--2 {
   width: 115%;
   grid-column: 4/7;
   grid-row: 4/6;
   z-index: 1;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
+}
+@media only screen and (max-width: 50em) {
+  .story__img--2 {
+    grid-row: 1/-1;
+    width: 100%;
+  }
 }
 .story__content {
   background-color: #f9f7f6;
@@ -267,6 +368,12 @@ body {
   display: grid;
   align-content: center;
   justify-items: start;
+}
+@media only screen and (max-width: 50em) {
+  .story__content {
+    grid-column: 1/-1;
+    grid-row: 5/span 1;
+  }
 }
 .story__text {
   font-size: 1.5rem;
