--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -11,36 +11,57 @@ $color-grey-dark-1: #54483A;
 $color-grey-dark-2: #6D5D4B;
 
 // FONT VARIABLES
-$font-primary: 'Nunito', sans-serif;
-$font-display: 'Josefin Sans', sans-serif;
+$font-primary: 'Nunito',
+sans-serif;
+$font-display: 'Josefin Sans',
+sans-serif;
+
+///RESPONSIVE BREAK POINT
+$bp-largest:75em; //1200px/16px=75;
+$bp-large:62.5em; //1000px/16px=62.5;
+$bp-medium:50em; //800px/16px=50;
+$bp-small:37.5em; //600px/16px=37.5;
+
 
 *,
 *::after,
-*::before{
+*::before {
     margin: 0;
     padding: 0;
     box-sizing: inherit;
 }
 
-html{
+html {
     box-sizing: border-box;
-    font-size: 62.5%; /*10px/16px  =62.5% => 1rem=10px;*/
+    font-size: 62.5%;
+
+    /*10px/16px  =62.5% => 1rem=10px;*/
+    @media only screen and (max-width: $bp-largest) {
+        font-size: 50%; //8px/16px  =50;
+    }
 }
-body{
+
+body {
     font-family: $font-primary;
     color: $color-grey-dark-2;
     font-weight: 300;
     line-height: 1.6;
 }
 
-.container{
+.container {
     display: grid;
-    grid-template-rows: 80vh min-content 40vw repeat(3,min-content);
-    grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem,1fr) [center-start] repeat(8,[col-start] minmax(min-content,14rem) [col-end] ) [center-end] minmax(6rem,1fr) [full-end];
-    
-/*    & > *{
-        padding: 40px;
-        font-size: 3rem;
-    }*/
-}
+    grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+    grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
 
+    @media only screen and (max-width: $bp-large) {
+        display: grid;
+        grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+        grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+    }
+
+    @media only screen and (max-width: $bp-medium) {
+        display: grid;
+        //grid-template-rows: 6rem calc(100vh-6rem) min-content min-content min-content 40vw repeat(3, min-content);
+        grid-template-rows: 6rem calc(100vh - 6rem)/* min-content min-content 40vw repeat(4, min-content)*/;
+    }
+}
