--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -8,11 +8,18 @@
     padding: 8rem;
     padding-top: 4rem;
     display: grid;
-    grid-template-rows: 1fr min-content 6rem 1fr;
-    grid-template-columns: max-content;
+    grid-template-rows: 1fr min-content minmax(6rem,min-content) 1fr;
+    grid-template-columns: minmax(min-content,max-content);
     grid-row-gap: 1.5rem;
     justify-content: center;
-    //align-content: space-around;
+    
+    @media only screen and (max-width: $bp-medium){
+        grid-column: 1/-1;
+    }
+    
+    @media only screen and (max-width: $bp-small){
+        padding: 5rem;
+    }
 
     &__logo {
         height: 3rem;
@@ -27,7 +34,7 @@
     &__seenon {
 
         &-text {
-            color: $color-grey-dark-1;
+            color: $color-grey-light-1;
             font-size: 1.6rem;
             display: grid;
             grid-template-columns: 1fr max-content 1fr;
@@ -47,9 +54,11 @@
             display: grid;
             justify-content: space-around;
             grid-auto-flow: column;
+            grid-column-gap: 2rem;
 
             img {
-                height: 2.5rem;
+                max-height: 2.5rem;
+                max-width: 100%;
                 filter: brightness(60%);
             }
         }
