--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -3,12 +3,17 @@
     &__pictures{
         background-color:$color-primary;
         grid-column: full-start / col-end 4;
-        
+        background-size: cover;
         display: grid;
         grid-template-rows: repeat(6,1fr);
         grid-template-columns: repeat(6,1fr);
         align-items: center;
         background-image: linear-gradient(rgba($color-primary,.5),rgba($color-primary,.5)),url(../img/back.jpg);
+        @media only screen and (max-width: $bp-medium){
+            grid-column: 1/-1;
+            padding: 6rem;
+            grid-row: 6/span 1;
+        }
     }
     &__img{
         &--1{
@@ -16,6 +21,10 @@
             grid-column: 2/6;
             grid-row: 2/6;
             box-shadow: 0 2rem 5rem rgba(0,0,0,.1);
+            @media only screen and (max-width: $bp-medium){
+                grid-column: 1/5;
+                grid-row: 1/-1;
+            }
         }
         &--2{
             width: 115%;
@@ -23,6 +32,10 @@
             grid-row: 4/6;
             z-index: 1;
             box-shadow: 0 2rem 5rem rgba(0,0,0,.2);
+            @media only screen and (max-width: $bp-medium){
+                grid-row: 1/-1;
+                width: 100%;
+            }            
         }
     }
     &__content{
@@ -39,6 +52,12 @@
         display: grid;
         align-content: center;
         justify-items: start;
+        @media only screen and (max-width: $bp-medium){
+            grid-column: 1/-1;
+            grid-row: 5/span 1;
+            //align-self: stretch;
+        }
+        
     }
     &__text{
          font-size: 1.5rem;
